--- a/game-stock-core/game-stock-api/build.gradle
+++ b/game-stock-core/game-stock-api/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 group rootProject.group
 version rootProject.version
+application.mainClass = 'net.cabii.game.api.GameStockApiKt'
 
 repositories {
     mavenCentral()
